# solvespace_occ

./: CMakeLists.txt
src/: CMakeLists.txt  solvespace.h  ttf.cpp
src/srf/: curve.cpp  surface.h
